updated footer design

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -7,65 +7,24 @@
         </div>
       </div>
       <div class="col-lg-6">
-        <div class="py-3">
-          <a href="/" class="logo-footer">
-            <img src="/assets/img/logo-horizontal.svg" class="img-fluid" alt="Ocupop logo">
-          </a>
-        </div>
-        <div class="py-3">
-          <p class="text-white">Social Icons</p>
-          <div class="d-flex">
-            <ul class="nav">
-              <li class="nav-item">
-                <a href="/" class="nav-link">Home</a>
-              </li>
-              <li class="nav-item">
-                <a href="/about" class="nav-link">About</a>
-              </li>
-              <li class="nav-item">
-                <a href="/work" class="nav-link">Work</a>
-              </li>
-              <li class="nav-item">
-                <a href="/contact" class="nav-link">Contact</a>
-              </li>
-            </ul>
+        <div class="h-100" style="position: relative;">
+          <h1 class="text-white">Aloha!</h1>
+          <p><a href="/contact" class="btn btn-border btn-border-white">Hit us up. We'd love to hear from you.</a></p>
+          <div class="d-flex align-items-center text-white">
+            <a href="/contact" class="social-icon">
+              {% include svg/mail-icon.svg %}
+            </a>
+            <a href="https://instagram.com/ocupop" class="social-icon">
+              {% include svg/instagram.svg %}
+            </a>
+          </div>
+          <div id="logo-wrapper" class="pt-3">
+            <a href="/" class="logo-footer">
+              <img src="/assets/img/logo-white.svg" class="img-fluid" alt="Ocupop logo">
+            </a>
           </div>
         </div>
       </div>
-      <!-- <div class="col-6 col-md-2 ml-auto">
-        <div class="content">
-          <div class="d-flex">
-            <ul class="nav flex-column">
-              <li class="nav-item">
-                <a href="/" class="nav-link">Home</a>
-              </li>
-              <li class="nav-item">
-                <a href="/about" class="nav-link">About</a>
-              </li>
-              <li class="nav-item">
-                <a href="/work" class="nav-link">Work</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="col-6 col-md-2">
-        <div class="content">
-          <div class="d-flex">
-            <ul class="nav flex-column">
-              <li class="nav-item">
-                <a href="/focus" class="nav-link">Focus</a>
-              </li>
-              <li class="nav-item">
-                <a href="/contact#careers" class="nav-link">Careers</a>
-              </li>
-              <li class="nav-item">
-                <a href="/contact" class="nav-link">Contact</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div> -->
     </div>
   </div>
 </footer>
