--- a/src/assets/_scss/elements/_cta_contact.scss
+++ b/src/assets/_scss/elements/_cta_contact.scss
@@ -31,6 +31,6 @@
   padding: 25px 0;
   border-top: 1px solid $white;
   &:last-of-type {
-    border-bottom: 0;
+    border-bottom: 1px solid $white;
   }
 }
