--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -9,7 +9,7 @@
       <div class="col-lg-6">
         <div class="h-100" style="position: relative;">
           <h1 class="text-white">Aloha!</h1>
-          <p><a href="/contact" class="btn btn-border btn-border-white">Hit us up. We'd love to hear from you.</a></p>
+          <p class="text-sans-serif"><a href="/contact" class="btn btn-border btn-border-white text-nocase"><strong>Hit us up. We'd love to hear from you.</strong></a></p>
           <div class="d-flex align-items-center text-white">
             <a href="/contact" class="social-icon">
               {% include svg/mail-icon.svg %}
