--- a/src/_includes/components/cta-contact.html
+++ b/src/_includes/components/cta-contact.html
@@ -1,4 +1,4 @@
-<p>Working from studios, cafes, chairlifts, hammocks and vans in:</p>
+<p class="text-sans-serif"><strong>Working from studios, cafes, chairlifts, hammocks and vans in:</strong></p>
 <div id="cta-contact">
   <div class="__react-app" data-component="ContactCTA"></div>
 </div>
