project logos mobile styles, mobile header styles

--- a/src/assets/_scss/base/_page_header.scss
+++ b/src/assets/_scss/base/_page_header.scss
@@ -99,7 +99,7 @@
     }
   }
   .bar {
-    background: $white;
+    background: $gray-800;
     border-radius: 0;
     display: block;
     margin: 5px 0;
