--- a/src/assets/_scss/elements/_buttons.scss
+++ b/src/assets/_scss/elements/_buttons.scss
@@ -74,20 +74,20 @@
     text-transform: uppercase;
     @include media-breakpoint-up(lg) {
       &::after {
-      content: "";
-      position: absolute;
-      display: block;
-      bottom: 0;
-      left: -80%;
-      width: 100%;
-      height: 2px;
-      background-color: $orange;
+        content: "";
+        position: absolute;
+        display: block;
+        bottom: 0;
+        left: 0;
+        width: 30px;
+        height: 2px;
+        background-color: $orange;
         @include transition(0.5s);
       }
       &:hover,
       &.active {
         &::after {
-          left: 0;
+          width: 100%;
         }
       }
     }
