--- a/src/assets/_scss/base/_page_footer.scss
+++ b/src/assets/_scss/base/_page_footer.scss
@@ -7,13 +7,14 @@
     }
   }
   .social-icon {
+    margin-right: 10px;
     #mail-icon {
       width: 52px;
       height: 52px;
     }
     #instagram-icon {
-      width: 30px;
-      height: 30px;
+      width: 27px;
+      height: 27px;
     }
   }
   .nav-link {
