team modal style fixes

--- a/src/_includes/modal-team.html
+++ b/src/_includes/modal-team.html
@@ -5,11 +5,11 @@
     </button>
     <section id="team-member" class="py-0 d-flex align-items-center">
       <div class="w-100">
-        <div class="row no-gutters">
-          <div class="col-lg-6">
+        <div class="row align-items-center no-gutters">
+          <div class="col-md-6">
             <div class="bg-image aspect-1x1" style="background-image: url({{ member.image | default: site.placeholders.aspect-1x1 }})"></div>
           </div>
-          <div class="col-lg-6">
+          <div class="col-md-6">
             <div class="team-member-details">
               <div class="content">
                 <h1>{{ member.name }}</h1>
