added test script for iFrame resizer

--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -27,4 +27,7 @@
 
   <!-- Web App Manifest -->
   <link rel="manifest" href="/manifest.json" />
+
+  <!-- TB: Test -->
+  <script src="{{ '/assets/js/vendor/iframeResizer.contentWindow.min.js' | prepend: site.baseurl }}" defer></script>
 </head>
