--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -29,5 +29,5 @@
   <link rel="manifest" href="/manifest.json" />
 
   <!-- TB: Test -->
-  <script src="{{ '/assets/js/vendor/iframeResizer.contentWindow.min.js' | prepend: site.baseurl }}" defer></script>
+  <script src="{{ '/assets/js/vendor/iframeResizer.contentWindow.min.js' | prepend: site.baseurl }}"></script>
 </head>
