Update bios / typo on home page

--- a/src/_includes/good-work.html
+++ b/src/_includes/good-work.html
@@ -14,7 +14,7 @@
       </div>
       <div class="col-lg-6 slide-left">  
         <div class="content editable">
-    <p>No cheesy sale-sters in EXPRESS shiny shirts, no account planners, no middle men, and none of the overhead that goes along with &lsquo;em! We interface directly with decision makers and fanatically pursue perfection in planning, execution, and implementation. Projects are completed quickly and effciently, and with refreshing candor and commitment...always aspiring to the ideal that we work WITH you, not for you.</p>
+    <p>No cheesy sale-sters in EXPRESS shiny shirts, no account planners, no middle men, and none of the overhead that goes along with &lsquo;em! We interface directly with decision makers and fanatically pursue perfection in planning, execution, and implementation. Projects are completed quickly and efficiently, and with refreshing candor and commitment...always aspiring to the ideal that we work WITH you, not for you.</p>
   </div>
       </div>
     </div>
