Fix for sticky position scroll on project pages

--- a/src/assets/_scss/base/_page_content.scss
+++ b/src/assets/_scss/base/_page_content.scss
@@ -2,7 +2,9 @@
   padding-top: 80px;
   background-color: $white;
   @include transition(padding-top, .25s);
-  overflow: hidden;
+  @include media-breakpoint-down(md) {
+    overflow: hidden;
+  }
   &.navbar-open {
     padding-top: 90px;
   }
