--- a/src/_includes/analytics.html
+++ b/src/_includes/analytics.html
@@ -7,6 +7,6 @@
   gtag('js', new Date());
 
   gtag('config', '{{ site.analytics_code }}');
-  gtag('config', '{{ site.analytics_code }}');
+  gtag('config', '{{ site.analytics_ga4_code }}');
 </script>
 {% endif %}
