Updated 'src/_includes/head.html' via CloudCannon

--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -1,4 +1,5 @@
 <head>
+  {% include analytics.html %}
   <meta name="google" content="notranslate" />
   <meta http-equiv="Content-Language" content="en_US" />
   <meta charset="utf-8">
