--- a/src/assets/_scss/base/_forms.scss
+++ b/src/assets/_scss/base/_forms.scss
@@ -289,81 +289,81 @@
   }
 }
 
-#contact-page-form {
-  &.cog-cognito {
-    .cog-label {
-      &::after {
-        display: none;
-      }
-      label {
-        position: absolute;
-        width: 1px;
-        height: 1px;
-        padding: 0;
-        margin: -1px;
-        overflow: hidden;
-        clip: rect(0,0,0,0);
-        border: 0;
-      }
-    }
-    
-    input,
-    input[type="text"],
-    textarea {
-      padding: 10px 0;
-      border: 0;
-      border-bottom: 1px solid $dark;
-      @include transition(padding, .3s);
-      &:focus {
-        padding: 10px;
-      }
-    }
-    
 
-    font-family: $font-family-secondary;
-    color: $dark;
-    position: relative;
-    overflow: hidden;
-    padding: 0;
-    text-transform: uppercase;
-    .cog-button--primary {
-      padding: 10px 0;
-      border: 0;
+.cog-cognito {
+  .cog-label {
+    &::after {
+      display: none;
+    }
+    label {
+      position: absolute;
+      width: 1px;
+      height: 1px;
+      padding: 0;
+      margin: -1px;
       overflow: hidden;
-      position: relative;
-      &:hover {
-        background-color: transparent;
-        color: $dark;
-      }
-      @include media-breakpoint-up(md) {
-        &::after {
-        content: "";
-        position: absolute;
-        display: block;
-        bottom: 0;
-        left: -80%;
-        width: 100%;
-        height: 2px;
-        background-color: $orange;
-          @include transition(0.5s);
-        }
-        &:hover,
-        &.active {
-          &::after {
-            left: 0;
-          }
-        }
-      }
+      clip: rect(0,0,0,0);
+      border: 0;
     }
-
-    .c-validation {
-      margin-left: 0;
-      border-radius: 0;
-      margin-right: 7px;
-    }
-    
   }
+  
+  input,
+  input[type="text"],
+  textarea {
+    padding: 10px 0;
+    border: 0;
+    border-bottom: 1px solid $dark;
+    @include transition(padding, .3s);
+    &:focus {
+      padding: 10px;
+    }
+  }
+  
+
+  font-family: $font-family-secondary;
+  color: $dark;
+  position: relative;
+  overflow: hidden;
+  padding: 0;
+  text-transform: uppercase;
+  .cog-button--primary {
+    padding: 10px 0;
+    border: 0;
+    overflow: hidden;
+    position: relative;
+    &:hover {
+      background-color: transparent;
+      color: $dark;
+    }
+    @include media-breakpoint-up(md) {
+      &::after {
+      content: "";
+      position: absolute;
+      display: block;
+      bottom: 0;
+      left: -80%;
+      width: 100%;
+      height: 2px;
+      background-color: $orange;
+        @include transition(0.5s);
+      }
+      &:hover,
+      &.active {
+        &::after {
+          left: 0;
+        }
+      }
+    }
+  }
+
+  .c-validation {
+    margin-left: 0;
+    border-radius: 0;
+    margin-right: 7px;
+  }
+  
 }
+
 
 .project-review {
   .cognito {
