Updated 1 file via CloudCannon.

--- a/src/assets/_scss/base/_forms.scss
+++ b/src/assets/_scss/base/_forms.scss
@@ -20,7 +20,7 @@
 
 // Enter cognito styles below
 
-.cognito {
+.cog-cognito {
   font-family: $font-family-forms;
   font-size: 1rem;
   // Ratings
