Updated 1 file via CloudCannon.

--- a/src/assets/_scss/base/_forms.scss
+++ b/src/assets/_scss/base/_forms.scss
@@ -277,7 +277,7 @@
     float: none;
     border: 1px solid $black;
     color: $black;
-    background-color: transparent;
+    background-color: transparent !important;
     font-family: $font-family-secondary;
     text-transform: uppercase;
     margin: 0;
