--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -25,6 +25,7 @@
   <!-- CSS -->
   <link rel="stylesheet" href="{{ '/assets/css/vendor/animate.css' | prepend: site.baseurl }}"/>
   <link rel="stylesheet" href="{{ '/assets/css/main.css' | prepend: site.baseurl }}"/>
+  <link rel="stylesheet" href="{{ '/assets/css/style-updates.css' | prepend: site.baseurl }}"/>
 
   <!-- Web App Manifest -->
   <link rel="manifest" href="/manifest.json" />
