--- a/src/assets/css/style-updates.css
+++ b/src/assets/css/style-updates.css
@@ -1,11 +1,11 @@
-/* jon was here */
+
 .cog-cognito .cog-button--primary {
-  padding: 0.375rem 1.25rem;
-  border-radius: 0;
-  float: none;
-  border: 1px solid #000;
-  color: #000;
+  padding: 0.375rem 1.25rem !important;
+  border-radius: 0 !important;
+  float: none !important;
+  border: 1px solid #000 !important;
+  color: #000 !important;
   background-color: transparent !important;
-  text-transform: uppercase;
-  margin: 0;
+  text-transform: uppercase !important;
+  margin: 0 !important;
 }
