--- a/src/assets/css/style-updates.css
+++ b/src/assets/css/style-updates.css
@@ -1,4 +1,5 @@
 
+/* cognito form style updates*/
 .cog-cognito .cog-form__container .cog-button--primary {
   padding: 0.375rem 1.25rem !important;
   border-radius: 0 !important;
@@ -8,8 +9,19 @@
   background-color: transparent !important;
   text-transform: uppercase !important;
   margin: 0 !important;
+  height: 40px !important;
+  line-height: 1 !important;
 }
 
-.cog-cognito .cog-input {
-
+.cog-cognito .cog-label {
+  font-family: "roboto-condensed", Helvetica, Arial, sans-serif !important;
 }
+
+.el-checkbox__label {
+  padding-left: 27px !important;
+}
+
+#contact-form .cog-cognito .cog-input {
+  border-bottom: 1px solid #000;
+}
+
