Updated 1 file via CloudCannon.

--- a/src/assets/css/style-updates.css
+++ b/src/assets/css/style-updates.css
@@ -21,7 +21,7 @@
   padding-left: 27px !important;
 }
 
-#contact-form .cog-cognito .cog-input {
+#contact-form .cog-cognito .cog-input input {
   border-bottom: 1px solid #000;
 }
 
