--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -7,6 +7,7 @@
   <meta name="description"
     content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="canonical" href="https://experienceyol.com{{ page.url }}" />
   {% include socialshare.html %}
 
   <!-- Fav and Touch Icons -->
