Updated 1 file via CloudCannon.

--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -13,11 +13,11 @@
       <div class="collapse navbar-collapse collapsed" id="primarynav">
         <ul class="navbar-nav ml-lg-auto">
           <li class="nav-item">
-            <a class="nav-link{% if page.url contains 'about' %} active{% endif %}" href="/about">About
+            <a class="nav-link{% if page.url contains 'about' %} active{% endif %}" href="/about/">About
               {% if page.url contains 'about' %}<span class="sr-only">(current)</span>{% endif %}</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link{% if page.url contains 'work' %} active{% endif %}" href="/work">Work
+            <a class="nav-link{% if page.url contains 'work' %} active{% endif %}" href="/work/">Work
               {% if page.url contains 'work' %}<span class="sr-only">(current)</span>{% endif %}</a>
           </li>
           <!-- <li class="nav-item">
@@ -30,7 +30,7 @@
               >
             </li> -->
           <li class="nav-item">
-            <a class="nav-link{% if page.url contains 'contact' %} active{% endif %}" href="/contact">Contact
+            <a class="nav-link{% if page.url contains 'contact' %} active{% endif %}" href="/contact/">Contact
               {% if page.url contains 'contact' %}<span class="sr-only">(current)</span>{% endif %}</a>
           </li>
         </ul>
