--- a/src/_includes/cookie-policy.html
+++ b/src/_includes/cookie-policy.html
@@ -9,7 +9,7 @@
           </p>
           <p class="my-2"><a id="confirm-cookie-consent" class="btn btn-outline-dark btn-sm">That's Cool</a></p>
           <p class="text-center mb-0">
-            <a href="/privacy" class="btn btn-inline btn-sm text-dark">More Details</a>
+            <a href="/privacy/" class="btn btn-inline btn-sm text-dark">More Details</a>
           </p>
         </div>
       </div>
