Updated 1 file via CloudCannon.

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -11,7 +11,7 @@
           <h1 class="text-white">Aloha!</h1>
           <p class="text-sans-serif"><a href="/contact/" class="btn btn-border btn-border-white text-nocase"><strong>Hit us up. We'd love to hear from you.</strong></a></p>
           <div class="d-flex align-items-center text-white">
-            <a href="/contact" class="social-icon">
+            <a href="/contact/" class="social-icon">
               {% include svg/mail-icon.svg %}
             </a>
             <a href="https://instagram.com/ocupop" class="social-icon">
