Updated 1 file via CloudCannon.

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -19,7 +19,7 @@
             </a>
           </div>
           <div id="logo-wrapper" class="pt-3">
-            <a href="/" class="logo-footer">
+            <a href="https://ocupop.com/" class="logo-footer">
               <img src="/img/logo-white.svg" class="img-fluid" alt="Ocupop logo">
             </a>
           </div>
