--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,3 +38,20 @@ body {
     @apply text-white;
   }
 }
+
+#think, #design, #build {
+  ul{
+    @apply space-y-2;
+    li{
+      @apply font-sans;
+    }
+  }
+}
+dl{
+  dt{
+    @apply uppercase font-sans font-bold text-lg mb-4;
+  }
+  dd{
+    @apply font-sans text-base;
+  }
+}
