nav color fixes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,6 +37,9 @@ body {
   .nav-item{
     @apply text-white;
   }
+  .logo{
+    @apply fill-white;
+  }
   .hamburger{
     @apply stroke-white;
   }
